TestSuite/errors/err0037.pas
type PRec = ^TRec;

type TRec = record a : integer; end;

begin
end.